bdr.BDR2.scala.error
Erreur de compilation :
BDR2:1: error: Missing closing brace `}' assumed here
var fini=false
^BDR2:21: error: ';' expected but 'else' found.
    else {fini=true
    ^